# nextlib

./: .gitattributes  .gitignore  README.md  jitpack.yml
.github/workflows/: build.yaml
ffmpeg/: setup.sh
gradle/: libs.versions.toml
media3ext/: build.gradle.kts  consumer-rules.pro
media3ext/src/main/cpp/: CMakeLists.txt  ffaudio.cpp  ffcommon.cpp  ffcommon.h  ffvideo.cpp
media3ext/src/main/java/io/github/anilbeesetti/nextlib/media3ext/ffdecoder/: FFmpegOnlyRenderersFactory.java  FfmpegAudioRenderer.java  FfmpegLibrary.java  FfmpegVideoDecoder.java  FfmpegVideoRenderer.java  NextRenderersFactory.kt
mediainfo/: build.gradle.kts
mediainfo/src/main/cpp/: CMakeLists.txt  mediainfo.cpp
